...

          override fun onNothingSelected(parent: AdapterView<*>?) {}
        }
    AlertDialog.Builder(context)
        .setTitle("Insert Code Snippet")
        .setView(dialogView as View)
        .setPositiveButton("Insert") { _, _ ->
          val selectedSnippet = langSnippets[spinner.selectedItemPosition]
          val name = if (selectedSnippet.requiresNameInput) nameEditText.text.toString() else ""
          var finalCode = selectedSnippet.template.replace("%s", name).replace(Regex("\\$\\d+"), "")
          val finalCursorOffset = finalCode.indexOf("$0")
          if (finalCursorOffset != -1) {
            finalCode = finalCode.replace("$0", "")
...
